# nvector-lite

./: .gitignore  CHANGES.adoc  LICENSE.txt  README.adoc  conftest.py  ipython_startup.py  nvector_lite.py  pyproject.toml  test_nvector_lite.py
examples/: cross_track_distance.py
s/: nvector_lite.py
t/: test_api.py  test_internal.py
