## Build system

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


## Project

[project]
name = 'nvector-lite'
version = '0.2.0'
requires-python = '>=3.10'
dependencies = ['numpy']

[project.optional-dependencies]
test = [
  'pytest',
  'hypothesis',
  'nvector',
  'geographiclib',
  'pyproj',
  'mypy ~= 1.10',
  'typing-extensions >= 4.10.0 ; python_version < "3.13"',
]


## Setuptools

[tool.setuptools]
package-dir = {'' = './s'}
py-modules = ['nvector_lite']


## Hatch

[tool.hatch.build.targets.sdist]
sources = ['./s']
[tool.hatch.build.targets.wheel]
sources = ['./s']

[tool.hatch.envs.test]
features = ['test']
[tool.hatch.envs.test.scripts]
test = 'pytest {args}'

[tool.hatch.envs.dev]
template = 'test'
extra-dependencies = ['ipython', 'pdbp']
[tool.hatch.envs.dev.scripts]
repl = 'ipython -i ipython_startup.py {args}'


## Pytest

[tool.pytest.ini_options]

minversion = '7.0'

# • Use the modern "importlib" import mode
# • Make test failure reports less enormous
# • Summarize with (a)ll except for passed: (w)arnings, (f)ailed, (E)rror, (s)kipped, (x)failed, (X)passed
# • Disable early-loading of the Hypothesis plugin; it will be added in conftest.
# NOTE: Don't include --dist=loadscope here because pytest-xdist isn't installed in CI
addopts = '--import-mode=importlib --tb=short -r a -p no:hypothesispytest'

testpaths = ['./t']

python_files = ['test_*.py', 'test.py']
python_classes = ['Test*', 'test_*']
python_functions = ['test_*']


## Mypy

[tool.mypy]

python_version = '3.10'
strict = true
files = ['s/', 't/']

plugins = ['numpy.typing.mypy_plugin']

[[tool.mypy.overrides]]

ignore_missing_imports = true

module = ['nvector', 'nvector.*']
